--- a/demo.ipynb
+++ b/demo.ipynb
@@ -57,8 +57,27 @@
    "source": [
     "process = ProcessFile(docs_df, source_type)\n",
     "refs_df = process.extract_reference()  # 提取参考文献\n",
-    "citation_relationship = process.process_citation(refs_df)  # 识别引用关系\n",
+    "citation_relationship = process.process_citation(refs_df)  # 识别引用关系"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 查看解析后的参考文献表\n",
     "refs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 查看引用关系表\n",
+    "citation_relationship"
    ]
   },
   {
@@ -83,7 +102,7 @@
    "metadata": {},
    "source": [
     "#### 导出引文网络图文件\n",
-    "图文件(后缀为.dot)可以使用 [Graphviz在线编辑器](http://magjac.com/graphviz-visual-editor/) 或下载到本地的 [Graphviz工具](https://graphviz.org/) 生成引文网络图。 "
+    "使用 [Graphviz在线编辑器](http://magjac.com/graphviz-visual-editor/) 或下载到本地的 [Graphviz工具](https://graphviz.org/) 生成引文网络图。 "
    ]
   },
   {
@@ -123,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 查看doc_index为10的文献的参考文献网络图，禁用时间线\n",
+    "# 查看编号为10的文献的参考文献网络图，禁用时间线\n",
     "graph_dot_file = graph.generate_dot_file(10, edge_type=\"cited\", show_timeline=False)\n",
     "print(graph_dot_file)"
    ]
@@ -134,8 +153,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 查看doc_index为10的文献的施引文献网络图\n",
-    "graph_dot_file = graph.generate_dot_file(10, edge_type=\"cited\")\n",
+    "# 查看编号为10的文献的引用文献网络图\n",
+    "graph_dot_file = graph.generate_dot_file(10, edge_type=\"citing\")\n",
     "print(graph_dot_file)"
    ]
   },
@@ -145,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 查看doc_index为10的文献的引文网络图\n",
+    "# 查看编号为10的文献的引文网络图，包含参考文献和引用文献\n",
     "graph_dot_file = graph.generate_dot_file(10)\n",
     "print(graph_dot_file)"
    ]
