--- a/demo.ipynb
+++ b/demo.ipynb
@@ -7,11 +7,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from typing import Literal\n",
-    "from histcite import ReadFile\n",
-    "from histcite import ProcessFile\n",
-    "from histcite import ComputeMetrics\n",
-    "from histcite import GraphViz"
+    "import histcite\n",
+    "from typing import Literal"
    ]
   },
   {
@@ -45,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_df = ReadFile(folder_path, source_type).read_all()  # 读取文件\n",
+    "docs_df = histcite.ReadFile(folder_path, source_type).read_all()  # 读取文件\n",
     "docs_df"
    ]
   },
@@ -55,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process = ProcessFile(docs_df, source_type)\n",
+    "process = histcite.ProcessFile(docs_df, source_type)\n",
     "refs_df = process.extract_reference()  # 提取参考文献\n",
     "citation_relationship = process.process_citation(refs_df)  # 识别引用关系"
    ]
@@ -93,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm = ComputeMetrics(docs_df, citation_relationship, source_type)\n",
+    "cm = histcite.ComputeMetrics(docs_df, citation_relationship, source_type)\n",
     "cm.write2excel(os.path.join(folder_path, \"result\", \"descriptive_statistics.xlsx\"))"
    ]
   },
@@ -111,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = GraphViz(docs_df, citation_relationship, source_type)\n",
+    "graph = histcite.GraphViz(docs_df, citation_relationship, source_type)\n",
     "\n",
     "# 选取LSC最高的100篇文献\n",
     "doc_indices = (\n",
@@ -220,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
