Use pathlib to replace os.path

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "import histcite\n",
     "from typing import Literal"
    ]
@@ -25,7 +25,8 @@
    "outputs": [],
    "source": [
     "source_type: Literal[\"wos\", \"cssci\", \"scopus\"]\n",
-    "folder_path = \"/Users/.../Downloads/dataset\"\n",
+    "folder_path = Path(\"/Users/.../Downloads/dataset\")\n",
+    "output_path = folder_path / \"result\"\n",
     "source_type = \"wos\""
    ]
   },
@@ -91,7 +92,7 @@
    "outputs": [],
    "source": [
     "cm = histcite.ComputeMetrics(docs_df, citation_relationship, source_type)\n",
-    "cm.write2excel(os.path.join(folder_path, \"result\", \"descriptive_statistics.xlsx\"))"
+    "cm.write2excel(output_path / \"descriptive_statistics.xlsx\")"
    ]
   },
   {
@@ -173,7 +174,7 @@
    "outputs": [],
    "source": [
     "# 导出dot文件\n",
-    "with open(os.path.join(folder_path, \"result\", \"graph.dot\"), \"w\") as f:\n",
+    "with open(output_path / \"graph.dot\", \"w\") as f:\n",
     "    f.write(graph_dot_file)"
    ]
   },
@@ -195,9 +196,7 @@
    "outputs": [],
    "source": [
     "# 导出图节点信息\n",
-    "graph_node_info.to_excel(\n",
-    "    os.path.join(folder_path, \"result\", \"graph_node_info.xlsx\"), index=False\n",
-    ")"
+    "graph_node_info.to_excel(output_path / \"graph_node_info.xlsx\", index=False)"
    ]
   }
  ],
