Rename some variables

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -24,10 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_type: Literal[\"wos\", \"cssci\", \"scopus\"]\n",
     "folder_path = Path(\"/Users/.../Downloads/dataset\")\n",
     "output_path = folder_path / \"result\"\n",
-    "source_type = \"wos\""
+    "source: Literal[\"wos\", \"cssci\", \"scopus\"] = \"cssci\""
    ]
   },
   {
@@ -43,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "docs_df = histcite.ReadFile(folder_path, source_type).read_all()  # 读取文件\n",
+    "docs_df = histcite.ReadFile(folder_path, source).read_all()\n",
     "docs_df"
    ]
   },
@@ -53,9 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "process = histcite.ProcessFile(docs_df, source_type)\n",
+    "process = histcite.ProcessFile(docs_df, source)\n",
     "refs_df = process.extract_reference()  # 提取参考文献\n",
-    "citation_relationship = process.process_citation(refs_df)  # 识别引用关系"
+    "citation_relation = process.process_citation(refs_df)  # 识别引用关系"
    ]
   },
   {
@@ -75,7 +74,7 @@
    "outputs": [],
    "source": [
     "# 查看引用关系表\n",
-    "citation_relationship"
+    "citation_relation"
    ]
   },
   {
@@ -91,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm = histcite.ComputeMetrics(docs_df, citation_relationship, source_type)\n",
+    "cm = histcite.ComputeMetrics(docs_df, citation_relation, source)\n",
     "cm.write2excel(output_path / \"descriptive_statistics.xlsx\")"
    ]
   },
@@ -109,16 +108,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = histcite.GraphViz(docs_df, citation_relationship, source_type)\n",
-    "\n",
+    "graph = histcite.GraphViz(docs_df, citation_relation, source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 选取LSC最高的100篇文献\n",
-    "doc_indices = (\n",
-    "    citation_relationship[citation_relationship[\"LCS\"] > 0]\n",
+    "doc_id_list = (\n",
+    "    citation_relation[citation_relation[\"LCS\"] > 0]\n",
     "    .sort_values(\"LCS\", ascending=False)\n",
     "    .index[:100]\n",
     "    .tolist()\n",
     ")\n",
-    "graph_dot_file = graph.generate_dot_file(doc_indices)\n",
+    "graph_dot_file = graph.generate_dot_file(doc_id_list)\n",
     "print(graph_dot_file)"
    ]
   },
@@ -129,8 +135,8 @@
    "outputs": [],
    "source": [
     "# 选取LSC大于等于5的文献\n",
-    "doc_indices = citation_relationship[citation_relationship[\"LCS\"] >= 5].index.tolist()\n",
-    "graph_dot_file = graph.generate_dot_file(doc_indices)\n",
+    "doc_id_list = citation_relation[citation_relation[\"LCS\"] >= 5].index.tolist()\n",
+    "graph_dot_file = graph.generate_dot_file(doc_id_list)\n",
     "print(graph_dot_file)"
    ]
   },
