--- a/demo.ipynb
+++ b/demo.ipynb
@@ -7,8 +7,9 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "import histcite\n",
-    "from typing import Literal"
+    "from typing import Literal\n",
+    "\n",
+    "import histcite"
    ]
   },
   {
