--- a/demo.ipynb
+++ b/demo.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "#### 导出引文网络图文件\n",
-    "使用 [Graphviz 在线编辑器](http://magjac.com/graphviz-visual-editor/) 或下载到本地的 [Graphviz](https://graphviz.org/) 生成引文网络图。 "
+    "请将 `graph_dot_file` 的内容复制到 [Graphviz 在线编辑器](http://magjac.com/graphviz-visual-editor/) 生成引文网络图。"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = histcite.GraphViz(docs_df, citation_matrix, source)"
+    "graph = histcite.GraphViz(docs_df, citation_matrix)"
    ]
   },
   {
